ADD OPACITY FUNCTION
added opacity functionality which starts etching from opacity 0 to 1.
changed random color functionality which only etches random color only
if not etched previously.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 nav
 {
     height: 80px;
+    width: 100vw;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
