--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
 }
-nav
+body
 {
-    height: 80px;
-    width: 100vw;
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 25px;
-    font-weight: bolder;
-    background-color: black;
-    
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    background:url(./bg2.png) no-repeat;
+    background-size: 100vw;
+}
+header
+{
+    height: 50px;
+    width: 100vw;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 0px 0px 0px 20px;
+    display: flex;
     align-items: center;
-    padding-left: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    box-shadow: 0px 1px 8px black;
     box-sizing: border-box;
-    box-shadow: 0px 2px 10px black;
+}
+footer
+{
+    height: 30px;
+    width: 100vw;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
 }
